--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,10 +7,76 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<title><%=((typeof titulo === "undefined" || !titulo) ? "Projeto" : (titulo + " - Projeto")) %></title>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link href="/public/css/estilo.css" rel="stylesheet" />
+
+	<%- defineContent("head") %>
 </head>
 <body>
 
-	<%- body %>
+    <div class="limitador">
+
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="logo1">
+                    <img src="/public/img/finalissimo.png" alt="logosite" width="250">
+                </div>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/embarcacoes">Embarcações</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <button class="btn btn-outline-success" type="button">Cadastrar-se</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+        <%- body %>
+
+		<div class="dababy">
+
+			<div class="container-fluid">
+
+
+				<div class="row">
+
+					<div class="col-sm-6">
+
+
+						<p class="lgsite2">
+
+							<img src="/public/img/finalissimo.png" alt="logosite2" width="200">
+
+						</p>
+
+					</div>
+
+					<div class="col-sm-6">
+
+						<img class="social" src="/public/img/image.png" alt="socialmedia" width="200">
+
+
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+
+    </div>
 
 </body>
 </html>
