update no login

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -30,14 +30,11 @@
 
 
                         <p class="primtexto">
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
-                            xxxxxxxxxxxxxxxxxxxxxxxx
+                           Nosso compromisso é prover aos nossos clientes uma
+                           experiência diferenciada com o aluguel e venda de
+                           embarcações luxuosas. Cuidamos de todo o processo,
+                           desde o primeiro contato do cliente com o site, até
+                           a entrega da embarcação.
                         </p>
 
 
