--- a/views/index/login.ejs
+++ b/views/index/login.ejs
@@ -1,51 +1,51 @@
 <div class="tela">
     <div class="container-fluid">
-        <div class="title">Cadastre-se</div>
+        <div class="title">Cadastre sua embarcação</div>
         <div class="content">
             <form action="#">
                 <div class="user-details">
                     <div class="input-box">
-                        <span class="details">Primeiro nome</span>
-                        <input type="text" placeholder="Insira seu nome" required>
+                        <span class="details">Tamanho</span>
+                        <input type="text" placeholder="Insira o tamanho de sua embarcação" required>
                     </div>
                     <div class="input-box">
-                        <span class="details">Sobrenome</span>
-                        <input type="text" placeholder="Insira seu sobrenome" required>
+                        <span class="details">Peso</span>
+                        <input type="text" placeholder="Insira o peso de sua embarcação" required>
                     </div>
                     <div class="input-box">
-                        <span class="details">Email</span>
-                        <input type="text" placeholder="Insira seu email" required>
+                        <span class="details">Tripulantes</span>
+                        <input type="text" placeholder="Quantidade de tripulantes suportada" required>
                     </div>
                     <div class="input-box">
-                        <span class="details">Número de telefone</span>
-                        <input type="text" placeholder="Insira seu número" required>
+                        <span class="details">Cabines</span>
+                        <input type="text" placeholder="Quantidade de cabines de sua embarcação" required>
                     </div>
                     <div class="input-box">
-                        <span class="details">Senha</span>
-                        <input type="text" placeholder="Insira sua senha" required>
+                        <span class="details">Ano de fabricação</span>
+                        <input type="text" placeholder="Insira a data de fabricação da embarcação" required>
                     </div>
                     <div class="input-box">
-                        <span class="details">Confirmar senha</span>
-                        <input type="text" placeholder="Confirme sua senha" required>
+                        <span class="details">Preço</span>
+                        <input type="text" placeholder="Insira o preço de sua embarcação" required>
                     </div>
                 </div>
                 <div class="gender-details">
                     <input type="radio" name="gender" id="dot-1">
                     <input type="radio" name="gender" id="dot-2">
                     <input type="radio" name="gender" id="dot-3">
-                    <span class="gender-title">Gênero</span>
+                    <span class="gender-title">Escolha um:</span>
                     <div class="category">
                         <label for="dot-1">
                             <span class="dot one"></span>
-                            <span class="gender">Masculino</span>
+                            <span class="gender">Alugar</span>
                         </label>
                         <label for="dot-2">
                             <span class="dot two"></span>
-                            <span class="gender">Feminino</span>
+                            <span class="gender">Vender</span>
                         </label>
                         <label for="dot-3">
                             <span class="dot three"></span>
-                            <span class="gender">Outro</span>
+                            <span class="gender">Alugar/Vender</span>
                         </label>
                     </div>
                 </div>
