--- a/views/index/login.ejs
+++ b/views/index/login.ejs
@@ -65,6 +65,11 @@
         margin: 0px auto;
     }
 
+    .title{
+
+        font-size: 30px;    
+    }
+
     .nav-link {
         font-size: 30px;
         margin-left: 100px;
@@ -240,7 +245,7 @@
     }
 
     .tela{
-        padding-top: 130px;
+        padding-top: 100px;
         padding-bottom: 127px;
         background-image: url(Ocean_planete__c__Anastasia_Taioglou__Unsplash.jpg);
         
