--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,8 +11,25 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="/public/css/estilo.css" rel="stylesheet" />
+    
 
 	<%- defineContent("head") %>
+
+    <style>
+
+        .nav-link{
+
+            margin-left: 20px;
+        }
+
+        .body{
+            max-width: 2000px;
+            width: 100%;
+        }
+
+
+
+    </style>
 </head>
 <body>
 
@@ -38,7 +55,7 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <button class="btn btn-outline-success" type="button">Cadastrar-se</button>
+                        <button type="button" class="btn btn-warning">Cadastre sua embarcação</button>
                     </form>
                 </div>
             </div>
