id de elementos

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -233,10 +233,13 @@
         .botao {
             background-color: black;
             color: gold;
-            padding: 5px 10px;
+            padding: 7px 15px;
             width: fit-content;
             border-radius: 40px;
-            font-size: 50px;
+            font-size: 35px;
+            font-family: 'Aboreto', cursive;
+            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Josefin Sans', sans-serif;
         }
 
         .textmin {
