--- a/views/index/login.ejs
+++ b/views/index/login.ejs
@@ -6,27 +6,27 @@
                 <div class="user-details">
                     <div class="input-box">
                         <span class="details">Tamanho</span>
-                        <input type="text" placeholder="Insira o tamanho de sua embarcação" required>
+                        <input type="number" id="inputTam" placeholder="Insira o tamanho de sua embarcação" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Peso</span>
-                        <input type="text" placeholder="Insira o peso de sua embarcação" required>
+                        <input type="number" id="inputPes" placeholder="Insira o peso de sua embarcação" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Tripulantes</span>
-                        <input type="text" placeholder="Quantidade de tripulantes suportada" required>
+                        <input type="number" id="inputTri" placeholder="Quantidade de tripulantes suportada" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Cabines</span>
-                        <input type="text" placeholder="Quantidade de cabines de sua embarcação" required>
+                        <input type="number" id="inputCab" placeholder="Quantidade de cabines de sua embarcação" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Ano de fabricação</span>
-                        <input type="text" placeholder="Insira a data de fabricação da embarcação" required>
+                        <input type="number" id="inputAno" placeholder="Insira a data de fabricação da embarcação" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Preço</span>
-                        <input type="text" placeholder="Insira o preço de sua embarcação" required>
+                        <input type="number" id="inputPre" placeholder="Insira o preço de sua embarcação" required>
                     </div>
                 </div>
                 <div class="gender-details">
@@ -37,15 +37,15 @@
                     <div class="category">
                         <label for="dot-1">
                             <span class="dot one"></span>
-                            <span class="gender">Alugar</span>
+                            <span class="gender" id="inputAlu">Alugar</span>
                         </label>
                         <label for="dot-2">
                             <span class="dot two"></span>
-                            <span class="gender">Vender</span>
+                            <span class="gender" id="inputVen">Vender</span>
                         </label>
                         <label for="dot-3">
                             <span class="dot three"></span>
-                            <span class="gender">Alugar/Vender</span>
+                            <span class="gender" id="inputAov">Alugar/Vender</span>
                         </label>
                     </div>
                 </div>
