abrir login com botão

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,7 +55,7 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <button type="button" class="btn btn-warning">Cadastre sua embarcação</button>
+                        <button type="button" class="btn btn-warning" onclick="window.open('/login')">Cadastre sua embarcação</button>
                     </form>
                 </div>
             </div>
