--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,7 +1,34 @@
-body {
-
+.limitador {
+   max-width: 2000px;
+   width: 100%;
+   margin: 0px auto;
+   
 }
 
 img {
    max-width: 100%;
+}
+
+.nav-link {
+   font-size: 30px;
+   text-decoration: none;
+   text-align: center;
+}
+
+.bg-light {
+   background-color: white !important;
+}
+
+.dababy {
+   padding: 2px 10px;
+   background-color: black;
+   color: white;
+}
+
+.lgsite2 {
+   margin-top: 8px;
+}
+
+.social {
+   margin-top: 8px;
 }
