--- a/views/index/embarcacoes.ejs
+++ b/views/index/embarcacoes.ejs
@@ -1,16 +1,8 @@
-
 <div class="tela">
 
     <div class="container-fluid">
-
         <div class="row">
-
-
-
             <div class="col-sm-6">
-
-
-
                 <h2>
                     MADSUMMER
                 </h2>
@@ -18,133 +10,45 @@
                 <img class="barco" src="/public/img/Jeff-Brown-12655.jpg" alt="madsummer" width="500">
             </div>
 
-
-
             <div class="col-sm-6">
-
-
-
                 <h2>
                     TATIANA
                 </h2>
 
-                <img class="barco" src="/public/img/7dd9af90-de11-11ea-ae0b-750b7d88fab7-Tatiana-yacht-Bilgin-2.jpg" alt="tatiana"
-                    width="500">
-
+                <img class="barco" src="/public/img/7dd9af90-de11-11ea-ae0b-750b7d88fab7-Tatiana-yacht-Bilgin-2.jpg" alt="tatiana" width="500">
             </div>
 
+            <div class="col-sm-6">
+                <h2>
+                    BOADICEIA
+                </h2>
 
+                <img class="barco" src="/public/img/Amels_yacht_for_charter_Boadicea_6997.jpg" alt="boadiceia" width="500">
+            </div>
 
+            <div class="col-sm-6">
+                <h2>
+                    AIR
+                </h2>
 
-
-
-
-
-
-
-
-
-
-        </div>
-    </div>
-
-    <div class="secao2">
-
-        <div class="container-fluid">
-
-            <div class="row">
-
-
-
-                <div class="col-sm-6">
-
-
-
-                    <h2>
-                        BOADICEIA
-                    </h2>
-
-                    <img class="barco" src="/public/img/Amels_yacht_for_charter_Boadicea_6997.jpg" alt="boadiceia"
-                        width="500">
-                </div>
-
-
-
-                <div class="col-sm-6">
-
-
-
-                    <h2>
-                        AIR
-                    </h2>
-
-                    <img class="barco" src="/public/img/[81m-Yacht-AIR]-6185-163.jpg" alt="air" width="500">
-
-                </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+                <img class="barco" src="/public/img/[81m-Yacht-AIR]-6185-163.jpg" alt="air" width="500">
             </div>
         </div>
-
     </div>
 
 </div>
 
 <%- contentFor("head") %>
-<style>
-    .limitador {
-        max-width: 2000px;
 
-        margin: 0px auto;
-    }
+<style type="text/css">
 
-    .nav-link {
-        font-size: 30px;
-        margin-left: 150px;
-        text-decoration: none;
-        text-align: center;
-
-    }
-
-    .secao2 {
-        margin-top: 100px;
-    }
-
-    .tela{
+    .tela {
         text-align: center;
         padding-top: 20px;
         padding-bottom: 50px;
     }
 
-    .barco{
+    .barco {
         border-radius: 20px;
     }
-
-    .social{
-        margin-left: 430px;
-        margin-top: 8px;
-    }
-
-    .lgsite2{
-        margin-top: 8px;
-    }
-
-    .dababy {
-        padding: 2px 10px;
-        background-color: black;
-        color: white;
-
-    }
-    
 </style>
