--- a/views/index/login.ejs
+++ b/views/index/login.ejs
@@ -58,41 +58,7 @@
 </div>
 
 <%- contentFor("head") %>
-<style>
-    .limitador {
-        max-width: 2000px;
-
-        margin: 0px auto;
-    }
-
-    .title{
-
-        font-size: 30px;    
-    }
-
-    .nav-link {
-        font-size: 30px;
-        margin-left: 100px;
-        text-decoration: none;
-        text-align: center;
-
-    }
-
-    .dababy {
-        padding: 2px 10px;
-        background-color: black;
-        color: white;
-    }
-
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
-    }
-
+<style type="text/css">
     .container {
         max-width: 700px;
         width: 100%;
@@ -212,8 +178,6 @@
         background: linear-gradient(135deg, #0d0d0e, gold);
     }
 
-    
-
     @media(max-width: 584px) {
         .container {
             max-width: 100%;
@@ -244,11 +208,9 @@
         }
     }
 
-    .tela{
+    .tela {
         padding-top: 100px;
         padding-bottom: 127px;
-        background-image: url(Ocean_planete__c__Anastasia_Taioglou__Unsplash.jpg);
-        
     }
 
 </style>
