--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,99 +1,90 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br">
+
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title><%=((typeof titulo === "undefined" || !titulo) ? "Projeto" : (titulo + " - Projeto")) %></title>
+    <title>
+        <%=((typeof titulo==="undefined" || !titulo) ? "Projeto" : (titulo + " - Projeto" )) %>
+    </title>
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link href="/public/css/estilo.css" rel="stylesheet" />
-    
-
-	<%- defineContent("head") %>
-
-    <style>
-
-        .nav-link{
-
-            margin-left: 20px;
-        }
-
-        .body{
-            max-width: 2000px;
-            width: 100%;
-        }
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
 
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Fjalla+One&family=Josefin+Sans&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Aboreto&family=Cinzel&family=Fjalla+One&family=Josefin+Sans&display=swap"
+        rel="stylesheet">
 
-    </style>
+    <!--
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    -->
+    <link href="/public/css/estilo.css" rel="stylesheet" />
+
+    <%- defineContent("head") %>
 </head>
+
 <body>
 
     <div class="limitador">
 
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="logo1">
-                    <img src="/public/img/finalissimo.png" alt="logosite" width="250">
-                </div>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/">Início</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/embarcacoes">Embarcações</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <button type="button" class="btn btn-warning" onclick="window.open('/login')">Cadastre sua embarcação</button>
-                    </form>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/"><img src="/public/img/finalissimo.png" alt="logosite" width="250"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav w-100">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/embarcacoes">Embarcações</a>
+                    </li>
+                    <li class="nav-item text-center text-lg-right" style="flex: 1 1 auto; margin-top: 10px;">
+                        <a class="btn btn-warning" href="/login" target="_blank">Cadastre sua embarcação</a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
         <%- body %>
 
-		<div class="dababy">
+        <div class="dababy">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-6 text-center text-sm-left">
+                        <p class="lgsite2">
+                            <img src="/public/img/finalissimo.png" alt="logosite2" width="200">
+                        </p>
+                    </div>
 
-			<div class="container-fluid">
-
-
-				<div class="row">
-
-					<div class="col-sm-6">
-
-
-						<p class="lgsite2">
-
-							<img src="/public/img/finalissimo.png" alt="logosite2" width="200">
-
-						</p>
-
-					</div>
-
-					<div class="col-sm-6">
-
-						<img class="social" src="/public/img/image.png" alt="socialmedia" width="200">
-
-
-					</div>
-
-				</div>
-			</div>
-
-		</div>
+                    <div class="col-sm-6 text-center text-sm-right">
+                        <img class="social" src="/public/img/image.png" alt="socialmedia" width="200">
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
 </body>
+
 </html>
